--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <p>How to play:</p>
             <ul>
-                <li>Survive by attacking and Avoiding the enemy characters</li>
+                <li>Survive by attacking and Avoiding the enemy characters, You Have 5 Lives</li>
                 <li>Fire Balls, Dinosaur, Dragon are the enemy characters</li>
                 <li>Kill enemies by attacking them, But you can not attack Fire balls </li>
                 <li>If you kill the Dinosaur, the position of the Dragon will be changed</li>
