Finalize starting logics and game over logics

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 
 
     <!-- Game over-->
-    <div id="game-over-container" class="d-flex flex-column align-items-center">
-        <div class="" id="gameOverImg"></div>
-        <div id="restart">
-            <!--                <button id="playAgain" class="btn btn-light">Play Again</button>-->
-            <img class="buttonImages" src="./img/restart.png" alt="RestartButton"/>
+    <div id="game-over-container" class="d-flex flex-column align-items-center m-2">
+        <div class="" id="gameOverImg">
+            <img src="./img/game_over.png" alt="">
+        </div>
+        <div id="restart" class="d-flex justify-content-center">
+            <!--<button id="playAgain" class="btn btn-light">Play Again</button>-->
+            <img src="./img/restart.png" alt="RestartButton"/>
         </div>
     </div>
 
@@ -38,7 +40,7 @@
 
 
 <!-- Instructions -->
-<div id="instructionsModal" class="modal d-flex align-items-center justify-content-center">
+<div id="instructionsModal" class="modal">
     <div class="modal-content">
         <h3>Instructions</h3>
 
