Adding Media Queries

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             <li>Press Space to function the Kill</li>
         </ul>
 
+        <p>Special Note:</p>
+        <ul>
+            <li>The game is design for desktop devices with full screen mode</li>
+            <li>So please make sure to get a better experience</li>
+        </ul>
+
         <!--Play button-->
         <div id="startButton" class="d-flex justify-content-center">
             <img src="./img/play.png" alt="PlayButton"/>
@@ -67,6 +73,12 @@
     </div>
 </div>
 
+<div id="not-support">
+    <h1>This is design for width > 1000px, please open from a desktop browser!</h1>
+</div>
+<div id="not-full-screen">
+    <h4>This is design for full screen mode, please click on the screen for a better experience!</h4>
+</div>
 
 </body>
 </html>
