Adding Special guide

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <p>Special Note:</p>
         <ul>
-            <li>The game is design for desktop devices with full screen mode</li>
+            <li>The game has been designed for desktop devices with full screen mode</li>
             <li>So please make sure to get a better experience</li>
         </ul>
 
