Update user guides

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         <div id="startButton" class="d-flex justify-content-center">
             <img src="./img/play.png" alt="PlayButton"/>
         </div>
-
     </div>
 </div>
 
@@ -77,7 +76,7 @@
     <h1>This is design for width > 1000px, please open from a desktop browser!</h1>
 </div>
 <div id="not-full-screen">
-    <h4>This is design for full screen mode, please click on the screen for a better experience!</h4>
+    <h4>This is designed for full screen mode, please click on the screen for a better experience!</h4>
 </div>
 
 </body>
