--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 
 <div id="not-support">
-    <h1>This is design for width > 1000px, please open from a desktop browser!</h1>
+    <h1>This is designed for width > 1000px, please open from a desktop browser!</h1>
 </div>
 <div id="not-full-screen">
     <h4>This is designed for full screen mode, please click on the screen for a better experience!</h4>
