Update Start Button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </ul>
 
         <!--Play button-->
-        <div id="startButton" class="d-flex justify-content-center">
+        <div id="startButton" class="d-flex justify-content-center opacity-0">
             <img src="./img/play.png" alt="PlayButton"/>
         </div>
     </div>
